fixed contact page flex layout issue where child padding would make items uneven

--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -7,124 +7,100 @@
 .contact {
   display: flex;
   flex-direction: column;
-  height: 100%;
-  width: 100%;
-  max-width: rem(700px);
-  max-height: rem(500px);
-
-  @include d1-mq('medium') {
-    max-height: rem(500px);
-  }
+  width: rem(700px);
+  height: rem(500px);
 
   &__header {
-    display: flex;
-    flex: 1;
+    flex: 1 1 20%;
     background-color: $color-matte-purple;
-    padding: rem(15px);
     border-radius: $border-radius--small $border-radius--small 0 0;
+    display: flex;
 
-    @include d1-mq('medium') {
-      flex: 0;
-    }
-
-    .contact__pic__container {
+    .contact__pic-container {
+      flex: 1 1 25%;
       @extend %center;
-      width: 25%;
 
       .contact__pic {
-        width: rem(90px);
-        height: rem(90px);
+        height: rem(70px);
+        width: rem(70px);
+        background-color: $color-white;
         border-radius: 50%;
-        background-color: white;
-
-        @include d1-mq('medium') {
-          height: rem(60px);
-          width: rem(60px);
-        }
       }
+    }
+
+    .contact__info__container {
+      flex: 1 1 75%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
   }
 
   &__form {
-    flex: 3;
+    flex: 1 1 60%;
+    display: flex;
+    flex-direction: column;
     background-color: $color-white;
+
+    &__name-container {
+      flex: 1 1 25%;
+      display: flex;
+
+      .contact__form__first-name-input {
+        flex: 1 1 50%;
+        border-right: rem(2px) solid $color-light-cool-gray;
+
+        @include d1-mq('medium') {
+          border-right: none;
+          border-bottom: rem(2px) solid $color-light-cool-gray;
+        }
+      }
+
+      .contact__form__last-name-input {
+        flex: 1 1 50%;
+      }
+
+      @include d1-mq('medium') {
+        flex-direction: column;
+        flex: 1 1 40%;
+      }
+    }
+
+    &__email-input {
+      flex: 1 1 25%;
+      border-top: rem(2px) solid $color-light-cool-gray;
+
+      @include d1-mq('medium') {
+        flex: 1 1 20%;
+      }
+    }
+
+    &__message-input {
+      flex: 1 1 50%;
+      border-top: rem(2px) solid $color-light-cool-gray;
+
+      @include d1-mq('medium') {
+        flex: 1 1 40%;
+      }
+    }
   }
 
   &__footer {
-    flex: 1;
-    background-color: $color-matte-purple;
+    flex: 1 1 20%;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    padding: 0 rem(20px);
+    background-color: $color-matte-purple;
     border-radius: 0 0 $border-radius--small $border-radius--small;
+    padding: rem(15px);
 
     @include d1-mq('medium') {
-      padding: rem(20px) rem(20px);
-      flex: 0;
       background-color: $color-white;
-    }
-  }
-}
-
-// Form
-.contact__info__container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.contact__form {
-  display: flex;
-  flex-direction: column;
-
-  &__name-container {
-    display: flex;
-    flex: 1;
-
-    @include d1-mq('medium') {
-      flex-direction: column;
-      flex: 2;
-    }
-
-    .contact__form__first-name-input {
-      height: 100%;
-      width: 100%;
-      border-right: rem(2px) solid $color-light-cool-gray;
-
-      @include d1-mq('medium') {
-        border: none;
-      }
-    }
-
-    .contact__form__last-name-input {
-      height: 100%;
-      width: 100%;
-      border: none;
-
-      @include d1-mq('medium') {
-        border-top: rem(2px) solid $color-light-cool-gray;
-      }
     }
   }
 
   & input,
   textarea {
-    padding: 20px;
-  }
-
-  &__email-input {
-    flex: 1;
-    border: none;
-    border-top: 2px solid $color-light-cool-gray;
-
-    @include d1-mq('medium') {
-      flex: 0.5;
-    }
-  }
-
-  &__message-input {
-    flex: 2;
-    border-top: 2px solid $color-light-cool-gray;
+    padding: rem(15px);
   }
 }
